--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,10 +1,12 @@
 {
   "compilerOptions": {
-    "module": "ESNext",
-    "moduleResolution": "bundler",
+    "module": "NodeNext",
+    "moduleResolution": "nodenext",
     "target": "ES2023",
     "strict": true,
     "esModuleInterop": true,
-    "ignoreDeprecations": "6.0"
+    "outDir": "./dist",
+    "rootDir": "./src"
+    // "ignoreDeprecations": "6.0"
   }
 }
